# STM32

./: CLOCK.c  CLOCK.h  README.md
Basic Blinky Setup/: README.md  setup_stm32_project.sh
Basic Blinky Setup/stm32f446_project/: Cargo.toml  run_release.sh
Basic Blinky Setup/stm32f446_project/src/: main.rs
Blinky Without NOP (Timer)/stm32f446_project/: memory.x
Blinky Without NOP (Timer)/stm32f446_project/src/: main.rs
Blinky wo NOP/stm32f446_project/src/: main.rs  rcc_config.rs  timer_config.rs
Clock Configure/stm32f446_project/: Cargo.toml
Clock Configure/stm32f446_project/src/: clock.rs  main.rs
Terrific Light/stm32f446_project/: openocd.gdb
Terrific Light/stm32f446_project/src/: main.rs  registers.rs  timer_config.rs
Traffic Light/stm32f446_project/: Cargo.toml  aiStudioChatUrl.txt  debug1.sh  debug2.sh  run_debug.sh
Traffic Light/stm32f446_project/.cargo/: config.toml
Traffic Light/stm32f446_project/src/: constants.rs  interreupt_helpers.rs  main.rs
Traffic_Light/stm32f446_project/: Cargo.toml  run_debug.sh
Traffic_Light/stm32f446_project/src/: constants.rs  gpio_helpers.rs  interreupt_helpers.rs  main.rs  rcc_config.rs  traffic.rs  uart.rs
duos25/src/: .clangd
duos25/src/compile/: Makefile
duos25/src/kern/arch/cm4/: cm4.c
duos25/src/kern/arch/stm32f446re/sys_lib/: stm32_startup.c
duos25/src/kern/include/kern/: kservice.h  syscall_def.h
duos25/src/kern/kmain/: kmain.c
duos25/src/kern/lib/kern/: sys_init.c
duos25/src/kern/sys_config/: system_config.h
duos25/src/kern/syscall/: kservice.c  syscall.c
